2014-07-21  Myles C. Maxfield  <mmaxfield@apple.com>

        Clicking on links while accessibility is enabled sometimes crashes
        https://bugs.webkit.org/show_bug.cgi?id=135074

        Reviewed by Chris Fleizach.

        When an accessibility request comes in from the system, we call updateBackingStore() on the
        relevant AccessibilityObject, which triggers a relayout of the entire document. This relayout
        might delete that accessibility node and its parent, which would cause the node to be deleted.
        After the stack unwinds, we then call a member function on the node without checking for this
        condition.

        Test: accessibility/parent-delete.html

        * accessibility/AccessibilityObject.cpp:
        (WebCore::AccessibilityObject::updateBackingStore): Retain the node for the duration of the
        function.

2014-07-22  Jeremy Jones  <jeremyj@apple.com>

        Don't create new UIWindow for video fullscreen.
        https://bugs.webkit.org/show_bug.cgi?id=135038

        Reviewed by Darin Adler.

        * WebCore.exp.in:
        * platform/ios/WebVideoFullscreenControllerAVKit.h: use UIView instead of UIScreen.
        * platform/ios/WebVideoFullscreenControllerAVKit.mm:
        (-[WebVideoFullscreenController enterFullscreen:]): provide parent UIView.
        * platform/ios/WebVideoFullscreenInterfaceAVKit.h: remove UIWindow.
        * platform/ios/WebVideoFullscreenInterfaceAVKit.mm: 
        (WebVideoFullscreenInterfaceAVKit::setupFullscreen): ditto 
        (WebVideoFullscreenInterfaceAVKit::cleanupFullscreen): ditto
        (WebVideoFullscreenInterfaceAVKit::invalidate): ditto
        (WebVideoFullscreenInterfaceAVKit::requestHideAndExitFullscreen): ditto

2014-07-22  Carlos Alberto Lopez Perez  <clopez@igalia.com>

        [GTK] Rollout r170529 due to ~10% performance regression on the
        perf test Animation/balls.
        https://bugs.webkit.org/show_bug.cgi?id=134972

        Reviewed by Martin Robinson.
